--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -1,5 +1,5 @@
 
-name: RP2040 builder
+name: Common nRF52 builder
 
 on: [pull_request, push, 'workflow_dispatch']
 
@@ -9,9 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         sketch: ['hid_composite_example']
-        fqbn: ['rpipico']
-        platform: ['rp2040']
-        package: ['rp2040']
+        fqbn_long: ['community_nrf52:nrf52:nrf52:pca10056']
 
     runs-on: ubuntu-latest
     
@@ -52,13 +50,25 @@ jobs:
           arduino-cli lib install   "Adafruit GFX Library"  "Adafruit NeoPixel"  "Adafruit SSD1306" 
           arduino-cli lib list
 
-      - name: Compile Sketch
+      - name: Compile Sketch - nRF52
+        if:  ${{ contains( matrix.fqbn_long , "nrf52" ) }}
+        env:
+          BSP_PATH: .arduino15/packages/adafruit/hardware/nrf52
         run: |
-          arduino-cli compile --fqbn ${{ matrix.package }}:${{ matrix.platform }}:${{ matrix.fqbn }}:usbstack=tinyusb ./${{ matrix.sketch }}  --output-dir ./${{ matrix.sketch }}/build
+          arduino-cli compile --fqbn ${{ matrix.fqbn_long }}  ./${{ matrix.sketch }}  --output-dir ./${{ matrix.sketch }}/build
+          BSP_VERSION=`eval ls $HOME/$BSP_PATH`
           BUILDLOC=`eval ls ./${{ matrix.sketch }}/build`
+          python $HOME/$BSP_PATH/$BSP_VERSION/tools/uf2conv/uf2conv.py ./${{ matrix.sketch }}/build/${{ matrix.sketch }}.ino.hex -c -f 0xADA52840 -o ./${{ matrix.sketch }}/build/${{ matrix.sketch }}.ino.uf2
+          ls -lR ./${{ matrix.sketch }}/build/
+
+      - name: Compile Sketch - RP2040
+        if:  ${{ contains( matrix.fqbn_long , "rp2040" ) }}
+        run: |
+          arduino-cli compile --fqbn ${{ matrix.fqbn_long }}:usbstack=tinyusb ./${{ matrix.sketch }}  --output-dir ./${{ matrix.sketch }}/build
+          
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.package }}-${{ matrix.platform }}-${{ matrix.fqbn }}-${{ matrix.sketch }}
+          name: ${{ matrix.fqbn_long }}-${{ matrix.sketch }}
           path: |
             ${{ matrix.sketch }}/build
