--- a/.github/workflows/HID-refactor.yml
+++ b/.github/workflows/HID-refactor.yml
@@ -9,8 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         sketch: ['HID-Refactor']
-        fqbn_long: ['community_nrf52:nrf52:pca10056',
-                    'adafruit:nrf52:feather52832',
+        fqbn_long: ['adafruit:nrf52:feather52832',
                     'adafruit:nrf52:feather52840',
                     'adafruit:samd:adafruit_feather_m0',
                     'adafruit:samd:adafruit_feather_m4',
@@ -59,6 +58,7 @@ jobs:
           arduino-cli core install community_nrf52:nrf52 --additional-urls $BSP_URL
           arduino-cli core update-index --additional-urls $BSP_URL_RP2040
           arduino-cli core install rp2040:rp2040 --additional-urls $BSP_URL_RP2040
+          arduino-cli core update-index --additional-urls $BSP_URL_STM32
           arduino-cli core list
           arduino-cli board listall
           # Install library dependencies
