--- a/.github/workflows/HID-refactor.yml
+++ b/.github/workflows/HID-refactor.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Setup Arduino CLI
         uses: arduino/setup-arduino-cli@v1.1.1
         
-      - name: Install BSP and Libraries
+      - name: Install BSP and Libraries - nRF52
+        if:  ${{ contains( matrix.fqbn_long , 'nrf52' ) }}
         env:
           BSP_URL: https://github.com/jpconstantineau/Community_nRF52_Arduino/releases/latest/download/package_jpconstantineau_boards_index.json
           BSP_PATH: .arduino15/packages/community_nrf52/hardware/nrf52
@@ -53,15 +54,67 @@ jobs:
           arduino-cli core update-index
           arduino-cli core update-index --additional-urls $BSP_URL_ADA
           arduino-cli core install adafruit:nrf52 --additional-urls $BSP_URL_ADA
-          arduino-cli core install adafruit:samd --additional-urls $BSP_URL_ADA
+          # arduino-cli core install adafruit:samd --additional-urls $BSP_URL_ADA
           arduino-cli core update-index --additional-urls $BSP_URL
           arduino-cli core install community_nrf52:nrf52 --additional-urls $BSP_URL
+          # arduino-cli core update-index --additional-urls $BSP_URL_RP2040
+          # arduino-cli core install rp2040:rp2040 --additional-urls $BSP_URL_RP2040
+          arduino-cli core list
+          arduino-cli board listall
+          # Install library dependencies
+          # arduino-cli lib install   "Adafruit GFX Library"  "Adafruit NeoPixel"  "Adafruit SSD1306" "Adafruit TinyUSB Library"
+          arduino-cli lib list
+
+      - name: Install BSP and Libraries - SAMD
+        if:  ${{ contains( matrix.fqbn_long , 'samd' ) }}
+        env:
+          BSP_URL: https://github.com/jpconstantineau/Community_nRF52_Arduino/releases/latest/download/package_jpconstantineau_boards_index.json
+          BSP_PATH: .arduino15/packages/community_nrf52/hardware/nrf52
+          BSP_URL_ADA: https://adafruit.github.io/arduino-board-index/package_adafruit_index.json
+          BSP_PATH_ADA: .arduino15/packages/adafruit/hardware/nrf52
+          BSP_URL_RP2040: https://github.com/earlephilhower/arduino-pico/releases/download/global/package_rp2040_index.json
+          BSP_PATH_RP2040: .arduino15/packages/rp2040/hardware/rp2040
+        run: |
+          # pip3 install adafruit-nrfutil
+          arduino-cli config init
+          arduino-cli core update-index
+          arduino-cli core update-index --additional-urls $BSP_URL_ADA
+          # arduino-cli core install adafruit:nrf52 --additional-urls $BSP_URL_ADA
+          arduino-cli core install adafruit:samd --additional-urls $BSP_URL_ADA
+          # arduino-cli core update-index --additional-urls $BSP_URL
+          # arduino-cli core install community_nrf52:nrf52 --additional-urls $BSP_URL
+          # arduino-cli core update-index --additional-urls $BSP_URL_RP2040
+          # arduino-cli core install rp2040:rp2040 --additional-urls $BSP_URL_RP2040
+          arduino-cli core list
+          arduino-cli board listall
+          # Install library dependencies
+          # arduino-cli lib install   "Adafruit GFX Library"  "Adafruit NeoPixel"  "Adafruit SSD1306" "Adafruit TinyUSB Library"
+          arduino-cli lib list
+
+      - name: Install BSP and Libraries - RP2040
+        if:  ${{ contains( matrix.fqbn_long , 'rp2040' ) }}
+        env:
+          BSP_URL: https://github.com/jpconstantineau/Community_nRF52_Arduino/releases/latest/download/package_jpconstantineau_boards_index.json
+          BSP_PATH: .arduino15/packages/community_nrf52/hardware/nrf52
+          BSP_URL_ADA: https://adafruit.github.io/arduino-board-index/package_adafruit_index.json
+          BSP_PATH_ADA: .arduino15/packages/adafruit/hardware/nrf52
+          BSP_URL_RP2040: https://github.com/earlephilhower/arduino-pico/releases/download/global/package_rp2040_index.json
+          BSP_PATH_RP2040: .arduino15/packages/rp2040/hardware/rp2040
+        run: |
+          # pip3 install adafruit-nrfutil
+          arduino-cli config init
+          arduino-cli core update-index
+          # arduino-cli core update-index --additional-urls $BSP_URL_ADA
+          # arduino-cli core install adafruit:nrf52 --additional-urls $BSP_URL_ADA
+          # arduino-cli core install adafruit:samd --additional-urls $BSP_URL_ADA
+          # arduino-cli core update-index --additional-urls $BSP_URL
+          # arduino-cli core install community_nrf52:nrf52 --additional-urls $BSP_URL
           arduino-cli core update-index --additional-urls $BSP_URL_RP2040
           arduino-cli core install rp2040:rp2040 --additional-urls $BSP_URL_RP2040
           arduino-cli core list
           arduino-cli board listall
           # Install library dependencies
-          arduino-cli lib install   "Adafruit GFX Library"  "Adafruit NeoPixel"  "Adafruit SSD1306" "Adafruit TinyUSB Library"
+          # arduino-cli lib install   "Adafruit GFX Library"  "Adafruit NeoPixel"  "Adafruit SSD1306" "Adafruit TinyUSB Library"
           arduino-cli lib list
 
       - name: Compile Sketch - nRF52
@@ -79,11 +132,13 @@ jobs:
         if:  ${{ contains( matrix.fqbn_long , 'rp2040' ) }}
         run: |
           arduino-cli compile --fqbn ${{ matrix.fqbn_long }}:usbstack=tinyusb ./${{ matrix.sketch }}  --output-dir ./${{ matrix.sketch }}/build
+          ls -lR ./${{ matrix.sketch }}/build/
 
       - name: Compile Sketch - samd
         if:  ${{ contains( matrix.fqbn_long , 'samd' ) }}
         run: |
           arduino-cli compile --fqbn ${{ matrix.fqbn_long }}:usbstack=tinyusb ./${{ matrix.sketch }}  --output-dir ./${{ matrix.sketch }}/build
+          ls -lR ./${{ matrix.sketch }}/build/
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
