update to SAMD and RP2040 builds

--- a/.github/workflows/HID-refactor.yml
+++ b/.github/workflows/HID-refactor.yml
@@ -88,7 +88,7 @@ jobs:
           arduino-cli core list
           arduino-cli board listall
           # Install library dependencies
-          # arduino-cli lib install   "Adafruit GFX Library"  "Adafruit NeoPixel"  "Adafruit SSD1306" "Adafruit TinyUSB Library"
+          arduino-cli lib install "Adafruit TinyUSB Library"
           arduino-cli lib list
 
       - name: Install BSP and Libraries - RP2040
@@ -114,7 +114,7 @@ jobs:
           arduino-cli core list
           arduino-cli board listall
           # Install library dependencies
-          # arduino-cli lib install   "Adafruit GFX Library"  "Adafruit NeoPixel"  "Adafruit SSD1306" "Adafruit TinyUSB Library"
+          arduino-cli lib install  "Adafruit TinyUSB Library"
           arduino-cli lib list
 
       - name: Compile Sketch - nRF52
