--- a/.github/workflows/HID-refactor.yml
+++ b/.github/workflows/HID-refactor.yml
@@ -11,9 +11,20 @@ jobs:
         sketch: ['HID-Refactor']
         fqbn_long: ['adafruit:nrf52:feather52832',
                     'adafruit:nrf52:feather52840',
+                    'adafruit:nrf52:itsybitsy52840',
                     'adafruit:samd:adafruit_feather_m0',
                     'adafruit:samd:adafruit_feather_m4',
-                    'rp2040:rp2040:rpipico']
+                    'adafruit:samd:adafruit_itsybitsy_m0',
+                    'adafruit:samd:adafruit_itsybitsy_m4',
+                    'adafruit:samd:adafruit_qtpy_m0',
+                    'adafruit:samd:adafruit_trellis_m4',
+                    'rp2040:rp2040:rpipico',
+                    'rp2040:rp2040:adafruit_itsybitsy',
+                    'rp2040:rp2040:adafruit_feather',
+                    'rp2040:rp2040:adafruit_kb2040',
+                    'rp2040:rp2040:sparkfun_promicrorp2040',
+                    'rp2040:rp2040:adafruit_qtpy',
+                    'rp2040:rp2040:adafruit_macropad2040',]
 
     runs-on: ubuntu-latest
     outputs:
